--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -13,6 +13,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Get Release
+      uses: agners/get-draft-release@v1.2.2
+      id: get_release
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        tag_name: ${{ github.ref }}
+    - name: Bump up version
+      env:
+        NEW_TAG: ${{ steps.get_release.outputs.tag_name }}
+      run: |
+        pip install --upgrade bumpversion
+        LAST_TWO_TAGS=$(git for-each-ref refs/tags/ --count=2 --sort=-v:refname --format="%(refname:short)")
+        LAST_ONE=$(echo $LAST_TWO_TAGS | cut -d' ' -f 2)
+        last_version=$(echo ${LAST_ONE//v/""})
+        echo Last version: ${last_version}
+        new_version=$(echo ${NEW_TAG//v/""})
+        echo New version: ${new_version}
+        git config --local user.name "github-actions[bot]"
+        bumpversion --current-version $last_version --new-version $new_version setup.py
     - name: update changelog with gren
       env:
         GREN_GITHUB_TOKEN: ${{ secrets.TOKEN }}
